--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,6 +9,7 @@ Maintainer: Elizabeth M. Sweeney <emsweene@jhsph.edu>
 Description: Creates probability maps of incident and enlarging lesion voxels
     from a baseline and followup MRI study.
 License: GPL
+LazyData: yes
 Depends:
     AnalyzeFMRI,
     oro.nifti
