--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,11 +12,11 @@ Description: Creates probability maps of incident and enlarging lesion voxels
 License: GPL
 LazyData: true
 Depends:
-    AnalyzeFMRI,
     oro.nifti
 Imports:
     downloader,
     graphics,
     stats,
-    grDevices
+    grDevices,
+    AnalyzeFMRI
 RoxygenNote: 5.0.1.9000
