--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: SuBLIME
 Type: Package
-Title: SuBLIME: Automatic Lesion Incidence Estimation and Detection using 
-    Multi-Modality Longitudinal MRIs
-Version: 1.2.2
+Title: Automatic Lesion Incidence Estimation and Detection using 
+    Multi-Modality Longitudinal Magnetic Resonance Images
+Version: 1.2.3
 Date: 2016-09-29
 Author: Elizabeth M. Sweeney and John Muschelli
 Maintainer: John Muschelli <muschellij2@gmail.com>
 Description: Creates probability maps of incident and enlarging lesion voxels
-    from a baseline and followup 'MRI' study in patients with multiple
-    sclerosis.
+    from a baseline and followup magnetic resonance imaging study in 
+    patients with multiple sclerosis.
 License: GPL
 LazyData: true
 Depends:
