--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,15 @@
-Package: SuBLIME
+Package: sublime
 Type: Package
 Title: Automatic Lesion Incidence Estimation and Detection using 
     Multi-Modality Longitudinal Magnetic Resonance Images
-Version: 1.2.3
+Version: 1.3
 Date: 2016-09-29
-Author: Elizabeth M. Sweeney and John Muschelli
-Maintainer: John Muschelli <muschellij2@gmail.com>
+Authors@R: c(person(given = "Elizabeth M.", "Sweeney",  
+  email = "elizabethmargaretsweeney@gmail.com", role = c("aut", "cre")),
+  person(given = "John", "Muschelli",  
+  email = "muschellij2@gmail.com", role = c("aut"))
+  )
+Maintainer: Elizabeth M. Sweeney <elizabethmargaretsweeney@gmail.com>
 Description: Creates probability maps of incident and enlarging lesion voxels
     from a baseline and followup magnetic resonance imaging study in 
     patients with multiple sclerosis.
