--- a/.travis.yml
+++ b/.travis.yml
@@ -5,16 +5,20 @@ sudo: false
 cache: packages
 r_check_args: --as-cran
 
+  # - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; 
+  #   then 
+  #   ( Xvfb :99 -ac -screen 0 1024x768x8; echo ok )& ; 
+  #   fi
+  # - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; 
+  #   then 
+  #   sh -e /etc/init.d/xvfb start ;
+  #   fi 
 before_script:
   - "export DISPLAY=:99.0"
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; 
-    then 
-    ( Xvfb :99 -ac -screen 0 1024x768x8; echo ok )& ; 
-    fi
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; 
-    then 
-    sh -e /etc/init.d/xvfb start ;
-    fi 
+  - fname=travis_helpers.sh
+  - wget -O ${fname} http://bit.ly/travis_helpers
+  - cat ${fname}; source ${fname}; rm ${fname}  
+  - start_xvfb() ;    
   - sleep 3
   
 os: 
