Fixing sublime problems.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,10 +3,11 @@
 export(SuBLIME_prediction)
 export(download_data)
 export(normalize)
+export(sublime_prediction)
 export(voxel_select)
-import(downloader)
 import(oro.nifti)
 importFrom(AnalyzeFMRI,GaussSmoothArray)
+importFrom(downloader,download)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,gray)
 importFrom(grDevices,pdf)
